--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "happybot",
+  "name": "oldpix",
   "version": "0.0.0",
-  "private": true,
+  "private": false,
   "author": "bremser <wbremser@gmail.com>",
-  "description": "A simple helpful robot for your Company",
+  "description": "find old photos from the Library of Congress",
   "dependencies": {
     "hubot": "^2.19.0",
     "hubot-diagnostics": "0.0.2",
+    "hubot-flickr-group-search": "^1.0.0",
     "hubot-google-images": "^0.2.7",
     "hubot-google-translate": "^0.2.1",
+    "hubot-googlemaps": "0.0.5",
     "hubot-help": "^0.2.2",
     "hubot-heroku-keepalive": "^1.0.3",
     "hubot-maps": "0.0.3",
